check_PROGRAMS = test_list test_map test_config
test_list_SOURCES = test_list.c ../src/list.h ../src/list.c
test_map_SOURCES = test_map.c ../src/map.c ../src/map.h ../src/list.h ../src/list.c
test_config_SOURCES = test_config.c ../src/map.c ../src/map.h ../src/list.h ../src/list.c ../src/config.h ../src/config.c
