check_PROGRAMS = test_list test_map test_config test_str test_json test_queue test_log
test_list_SOURCES = test_list.c ../src/list.h ../src/list.c
test_map_SOURCES = test_map.c ../src/map.c ../src/map.h ../src/list.h ../src/list.c
test_config_SOURCES = test_config.c ../src/map.c ../src/map.h ../src/list.h ../src/list.c ../src/config.h ../src/config.c
test_str_SOURCES = test_str.c ../src/str.h ../src/str.c
test_json_SOURCES = test_json.c ../src/str.h ../src/str.c ../src/json.h ../src/json.c ../src/list.h ../src/list.c ../src/map.h ../src/map.c
test_queue_SOURCES = test_queue.c ../src/queue.h ../src/queue.c
test_log_SOURCES = test_log.c ../src/log.h ../src/log.c ../src/osclt.h ../src/osclt.c ../src/queue.h ../src/queue.c ../src/str.h ../src/str.c ../src/config.h ../src/config.c ../src/list.h ../src/list.c ../src/map.h ../src/map.c
